Change background style

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,6 +4,7 @@ body {
   flex-flow: column;
   height: 100vh;
   color: white;
+  background-size: cover;
 }
 .my-header {
   background-color: black;
